--- a/source/styles/blocks/filter.scss
+++ b/source/styles/blocks/filter.scss
@@ -14,7 +14,7 @@
 
   @media (min-width: $tablet-width) {
     border: 0;
-    padding: 0 70px 72px;
+    padding: 0 70px 42px;
   }
 
   @media (min-width: $desktop-width) {
@@ -91,6 +91,10 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+
+  @media (min-width: $tablet-width) {
+    gap: 30px;
+  }
 
   @media (min-width: $desktop-width) {
     flex-direction: row;
