--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -202,3 +202,16 @@
     left: 133px;
   }
 }
+
+// Hover //
+
+.programs__link:hover {
+  opacity: 0.7;
+}
+
+// Actived //
+
+.programs__link:active {
+  opacity: 0.5;
+}
+
