--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -3,63 +3,153 @@
   display: flex;
   flex-wrap: wrap;
   width: auto;
-  position: relative;
-  min-height: 66px;
+  height: 66px;
   background-color: $bg-base-white;
+
+  @media (min-width: $tablet-width) {
+    max-height: 55px;
+  }
+
+  @media (min-width: $tablet-width) {
+    background-color: transparent;
+  }
 }
 
 
-@media (min-width: $tablet-width) {
-  .main-nav__item--current {
-   border-bottom: 2px solid $bg-green;
-}
+.main-nav__item--current {
+  @media (min-width: $tablet-width) {
+     border-bottom: 2px solid $bg-green;
+  }
+
+  @media (min-width: $desktop-width) {
+    border-bottom: 2px solid $bg-base-white;
+  }
+
 }
 
 
 .main-nav__toggle {
   position: absolute;
-  top: 0;
-  right: 0;
+  margin: 0;
+  padding: 0;
   display: block;
-  z-index: 2;
   width: 24px;
   height: 24px;
   cursor: pointer;
   border: 0;
   background-color: $bg-base-white;
- 
+  top: 20px;
+  right: 20px;
+
   @media (min-width: $tablet-width) {
     display: none;
-}
+  }
 }
 
 
-.main-nav__close::before {
-  content: "";
+.main-nav--closed .main-nav__toggle {
+  &::before {
+    content: "";
+    display: block;
+    width: 26px;
+    height: 24px;
+    background-image: url("/icons/header/burger.svg");
+    background-repeat: no-repeat;
+    background-color: transparent;
+  }
+}
+
+.main-nav--opened .main-nav__toggle {
+  &::before {
+    content: "";
+    display: block;
+    width: 20px;
+    height: 20px;
+    background-image: url("/icons/header/close.svg");
+    background-repeat: no-repeat;
+    background-color: transparent;
+  }
+}
+
+.main-nav--nojs .main-nav__toggle {
+  display: none;
+}
+
+.main-nav__wrapper {
+  display: none;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: row;
+  }
+
+}
+
+
+.main-nav--nojs .main-nav__wrapper {
+  position: static;
+  min-height: 0;
+}
+
+.main-nav--nojs .main-nav__item {
+  display: block;
+}
+
+
+
+.main-nav--opened .main-nav__wrapper {
   position: absolute;
-  top: 23px;
-  right: 20px;
-  width: 18px;
-  height: 18px;
-  background-image: url("/icons/stack.svg#header_burger");
+  display: block;
+  height: 198px;
+  width: 320px;
+  top: 66px;
+  right: 0;
+  z-index: 10;
   background-color: $bg-base-white;
 }
 
 
-
 .main-nav__list {
   font-family: $primary-font;
+  position: absolute;
+  right: 0;
+  left: 0;
 
   @media (min-width: $tablet-width) {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
-    gap: 10px 34px;
+    justify-content: center;
+    align-items: center;
+    position: static;
+    margin-left: 94px;
+    gap: 33px;
+  }
+
+  @media (min-width: $desktop-width) {
+    z-index: 1;
+
+  }
 }
 
-   @media (min-width: $desktop-width) {
-    z-index: 1;
-   }
+.main-nav__list a {
+  position: relative;
+  display: block;
+  padding: 22px 75px 24px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+  }
+
+}
+
+.main-nav__item {
+ border-top: 1px solid #E6E6E6;
+
+ @media (min-width: $tablet-width) {
+  border-top: 0;
+  padding-bottom: 10px;
+ }
 }
 
 .main-nav__link {
@@ -69,13 +159,24 @@
   text-transform: uppercase;
   text-align: center;
 
+  @media (min-width: $tablet-width) {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
   @media (min-width: $desktop-width) {
     color: $secondary-color-text;
-   }
+  }
 }
 
 @media (min-width: $desktop-width) {
   .main-nav__link--inner {
     color: $base-color-text;
+  }
 }
+
+@media (min-width: $desktop-width) {
+  .main-nav__item-inner--current {
+    border-bottom: 2px solid $bg-green;
+  }
 }
